alsa-lib (1.0.15-1) unstable; urgency=low

  * New upstream release

  [ Elimar Riesebieter ]
  * Removed mdw.patch. Applied from upstream.
  * Added python2.4-dev to BuildDepends.
  * Added Homepage header in debian/control.
  * Added --disable-python for crosscompiling 64bit flavour.
  * Bumped shlibs to 1.0.15: _snd_pcm_mmap_emul_open has been added to
    symbols.

 -- Elimar Riesebieter <riesebie@lxtec.de>  Sat, 20 Oct 2007 22:51:01 +0200

alsa-lib (1.0.14a-2) unstable; urgency=low

  [ Elimar Riesebieter ]
  * PCM plugin `lfloat' not built: patch from Mark Wooding. The patch is
    applied upstream and should be disabled next rc release. (closes: #430833)
  * For some reason quilt refreshed relibtoolise.patch.
  * debian/control: s/${Source-Version}/${binary:Version}/
  * debian/rules: s/-$(MAKE) distclean/[ ! -f Makefile ] || $(MAKE) distclean/

 -- Jordi Mallach <jordi@debian.org>  Wed, 04 Jul 2007 14:40:59 +0200

alsa-lib (1.0.14a-1) unstable; urgency=low

  [ Elimar Riesebieter ]
  * New upstream release
    - Fix plugin directory
    - Properly disable -Bsymbolic-functions if ld doesn't support
  * Revert passing --with-plugindir.

 -- Jordi Mallach <jordi@debian.org>  Wed, 13 Jun 2007 20:31:01 +0200

alsa-lib (1.0.14-2) unstable; urgency=low

  * debian/rules: pass --with-plugindir to configure, as a typo in
    configure.in sets a bad default (closes: #428334).

 -- Jordi Mallach <jordi@debian.org>  Mon, 11 Jun 2007 15:19:20 +0200

alsa-lib (1.0.14-1) unstable; urgency=low

  * New upstream release

  [ Elimar Riesebieter ]
  * Patch management switched to quilt. This is more comfortable.

  [ Jordi Mallach ]
  * Bump shlibs to 1.0.14, as new symbols have been added. 

 -- Jordi Mallach <jordi@debian.org>  Sat, 09 Jun 2007 19:17:41 +0200

alsa-lib (1.0.14~rc4-2) experimental; urgency=low

  [ Jordi Mallach ]
  * debian/control:
    - add XS-Vcs-Browser and XS-Vcs-Svn headers.
    - Build-Depend on gcc-multilib only on the available architectures