@@ -9,6 +9,8 @@ alsa-lib (1.0.15-1) unstable; urgency=low
   * Added --disable-python for crosscompiling 64bit flavour.
   * Bumped shlibs to 1.0.15: _snd_pcm_mmap_emul_open has been added to
     symbols.
+  * debian/rules biarch code doesn't work for new archictures. Patch from 
+    Martin Michlmayr (closes: #447879)
 
  -- Elimar Riesebieter <riesebie@lxtec.de>  Sat, 20 Oct 2007 22:51:01 +0200
 
